basic layout and pan+zoom working

--- a/app/simple_tree.html
+++ b/app/simple_tree.html
@@ -2,9 +2,14 @@
 <meta charset="utf-8">
 <style type="text/css">
   
-
+  .overlay {
+    background-color: #EEE;
+  }
+  
   .node circle {
-    r: 10px;
+    fill: #fff;
+    stroke: steelblue;
+    stroke-width: 1.5px;
   }
    
   .node text {
@@ -12,9 +17,9 @@
   }
    
   .link {
-    
-    stroke: 'black';
-    stroke-width: 5px;
+    fill: none;
+    stroke: black;
+    stroke-width: 1px;
   }
 
 </style>
