drag and drop working e2e, plus some bugs

--- a/app/simple_tree.html
+++ b/app/simple_tree.html
@@ -22,6 +22,14 @@
     stroke: black;
     stroke-width: 1px;
   }
+  
+  .ghostCircle.show{
+      display:block;
+  }
+
+  .ghostCircle, .activeDrag {
+       display: none;
+  }
 
 </style>
 <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
