--- a/app/simple_tree.html
+++ b/app/simple_tree.html
@@ -36,6 +36,7 @@
 <script src="http://d3js.org/d3.v3.min.js"></script>
 <script src="js/simple_tree.js"></script>
 <body>
+  <button id="save">Save</button>
     <div id="tree-container"></div>
 </body>
 </html>
