change class for expansion

--- a/app/simple_tree.html
+++ b/app/simple_tree.html
@@ -19,7 +19,7 @@
    
   .link {
     fill: none;
-    stroke: black;
+    stroke: #ccc;
     stroke-width: 1px;
   }
   
@@ -38,6 +38,11 @@
   
   .expansion.show {
     display:block;
+  }
+  
+  .expansion.show.collapsed {
+    display:block;
+    fill: red;
   }
 
 </style>
