--- a/app/simple_tree.html
+++ b/app/simple_tree.html
@@ -16,6 +16,11 @@
     font-size:10px; 
     font-family:sans-serif;
   }
+  
+  .node text.cat {
+    font-size: 20px; 
+    font-family:sans-serif;
+  }
    
   .link {
     fill: none;
